# django-eav-filter

./: docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/categories/: admin.py  models.py  serializers.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_auto_20210724_0814.py
backend/categories/presenters/: category_detail_view.py
backend/categories/services/: csv_import.py
backend/categories/services/filtering/: extract_filter_set.py  extract_nested_filter_set.py  extract_products_attributes_and_values.py  filter_set.py  filter_set_item.py  filter_set_item_value.py  product_filter.py
backend/core/: settings.py  urls.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/management/commands/: import_products.py
backend/products/migrations/: 0001_initial.py  0002_auto_20210724_0814.py
backend/products/services/: csv_import.py
backend/products/services/filtering/: extract_filter_set.py  extract_nested_filter_set.py  extract_products_attributes_and_values.py  filter_set.py  filter_set_item.py  product_filter.py
backend/tests/: conftest.py  factories.py  test_filter_set_item.py  test_filter_set_item_value.py  test_models.py
frontend/: Dockerfile  nuxt.config.js  package.json
frontend/components/: Header.vue  MainMenu.vue  ProductFilter.vue  ProductListItem.vue  TabMenu.vue
frontend/layouts/: default.vue  error.vue
frontend/pages/: contacts.vue  index.vue
frontend/plugins/: axios.js
frontend/store/: category.js
(+3 files in other folders)
